--- a/tailwind/input.css
+++ b/tailwind/input.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    @apply bg-view text-on-surface
+    @apply bg-view text-on-surface overflow-x-hidden
 }
 
 h2 {
@@ -27,7 +27,7 @@ header {
 }
 
 main {
-    @apply space-y-4 mx-auto mb-24 px-6 w-full max-w-lg overflow-hidden
+    @apply space-y-4 mx-auto mb-24 px-6 w-full max-w-lg
 }
 
 dialog {
